--- a/maquettes/style/style.css
+++ b/maquettes/style/style.css
@@ -82,7 +82,7 @@ footer h4 {
 }
 
 #editor {
-  height: 400px;
+  height: 500px;
   margin: 0;
 }
 
@@ -112,4 +112,22 @@ main.editor .empty-nav {
 #runFile {
   font-weight: bold;
   font-size: 17px;
+}
+
+li {
+  list-style-type: none;
+}
+
+.info {
+  margin-left: 30px;
+  font-style: italic;
+  font-size: 15px;
+}
+
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
 }
