--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -1,104 +1,85 @@
 .glyphicon {
-  top: 3px;
-}
+  top: 3px; }
 
-a, a:hover, a:focus  {
-    color: #337ab7;
-    text-decoration: none;
-}
+a, a:hover, a:focus {
+  color: #337ab7;
+  text-decoration: none; }
 
 body {
-    background-color: aliceblue;
-    font-family: 'Roboto', 'Verdana', 'sans-serif';
-}
+  background-color: aliceblue;
+  font-family: 'Roboto', 'Verdana', 'sans-serif'; }
 
 header h3, header nav {
-    display: inline-block;
-}
+  display: inline-block; }
 
 header h3 {
-    margin: 0;
-    font-style: italic;
-}
+  margin: 0;
+  font-style: italic; }
 
 .jumbotron {
   padding-top: 1px;
-    background-color: #92ef95;
-    border-radius: 0 0 15px 15px !important;
-}
+  background-color: #92ef95;
+  border-radius: 0 0 15px 15px !important; }
 
 #headerDescription {
-    margin-top: 20px;
-}
+  margin-top: 20px; }
 
 main {
-    background-color: rgb(110, 157, 198);
-    padding: 25px;
-    border-radius: 20px;
-    margin-bottom: 100px;
-}
+  background-color: #6e9dc6;
+  padding: 25px;
+  border-radius: 20px;
+  margin-bottom: 100px; }
 
 main.list {
-  position: relative;
-}
+  position: relative; }
 
 button.add {
   position: absolute;
   top: 0;
-  right: 0;
-}
+  right: 0; }
 
 #signupContainer {
-    text-align: center;
-}
+  text-align: center; }
 
 main .header {
-    display: inline-block;
-    padding: 10px 30px;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.85);
-}
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.85); }
 
 #submitContainer {
-    padding: 20px 0 15px 0;
-}
+  padding: 20px 0 15px 0; }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    background-color: #92ef95;
-    opacity: 0.7;
-    height: 50px;
-    padding: 15px;
-    width: 100%;
-    text-align: center;
-    transition: opacity 1s;
-    z-index: 4;
-}
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: #92ef95;
+  opacity: 0.7;
+  height: 50px;
+  padding: 15px;
+  width: 100%;
+  text-align: center;
+  transition: opacity 1s;
+  z-index: 4; }
 
 footer h4 {
-    margin: 0;
-}
+  margin: 0; }
 
 #editor {
   height: 500px;
-  margin: 0;
-}
+  margin: 0; }
 
 main.editor nav {
   margin-bottom: 15px;
   display: flex;
-  flex-flow: row wrap;
-}
+  flex-flow: row wrap; }
 
 main.editor nav > div {
-  display: inline-flex;
-}
+  display: inline-flex; }
 
 main.editor .empty-nav {
-  flex: 1 0;
-}
+  flex: 1 0; }
 
 #fileName {
   color: #fff;
@@ -106,28 +87,24 @@ main.editor .empty-nav {
   background-color: #92ef95;
   font-size: 20px;
   padding: 3px;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 #runFile {
   font-weight: bold;
-  font-size: 17px;
-}
+  font-size: 17px; }
 
 li {
-  list-style-type: none;
-}
+  list-style-type: none; }
 
 .info {
   margin-left: 30px;
   font-style: italic;
-  font-size: 15px;
-}
+  font-size: 15px; }
 
 .green {
-  color: green;
-}
+  color: green; }
 
 .red {
-  color: red;
-}
+  color: red; }
+
+/*# sourceMappingURL=style.css.map */
