--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,22 +1,20 @@
-.glyphicon {
-  top: 3px;
-}
-
-a, a:hover, a:focus  {
-    color: #337ab7;
-    text-decoration: none;
-}
-
+/* BODY */
 body {
     background-color: aliceblue;
     font-family: 'Roboto', 'Verdana', 'sans-serif';
 }
 
-header h3, header nav {
-    display: inline-block;
+
+/* HEADER */
+#headerDescription {
+    margin-top: 20px;
 }
 
 header {
+	h3, nav {
+		display: inline-block;
+	}
+
 	h3 {
 	    margin: 0;
 	    font-style: italic;
@@ -25,95 +23,41 @@ header {
 
 .jumbotron {
   padding-top: 1px;
-    background-color: #92ef95;
-    border-radius: 0 0 15px 15px !important;
-}
-
-#headerDescription {
-    margin-top: 20px;
-}
-
-main {
-    background-color: rgb(110, 157, 198);
-    padding: 25px;
-    border-radius: 20px;
-    margin-bottom: 100px;
-}
-
-main.list {
-  position: relative;
-}
-
-button.add {
-  position: absolute;
-  top: 0;
-  right: 0;
+  background-color: #92ef95;
+  border-radius: 0 0 15px 15px !important;
 }
 
 #signupContainer {
     text-align: center;
 }
 
-main .header {
-    display: inline-block;
-    padding: 10px 30px;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.85);
+
+/* MAIN */
+main {
+    background-color: rgb(110, 157, 198);
+    padding: 25px;
+    border-radius: 20px;
+    margin-bottom: 100px;
+
+		.header {
+		    display: inline-block;
+		    padding: 10px 30px;
+		    border-radius: 10px;
+		    background: rgba(255, 255, 255, 0.85);
+		}
 }
 
-#submitContainer {
-    padding: 20px 0 15px 0;
+main.list {
+  position: relative;
 }
 
-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    background-color: #92ef95;
-    opacity: 0.7;
-    height: 50px;
-    padding: 15px;
-    width: 100%;
-    text-align: center;
-    transition: opacity 1s;
-    z-index: 4;
+.glyphicon {
+  top: 3px;
 }
 
-footer h4 {
-    margin: 0;
-}
-
-#editor {
-  height: 500px;
-  margin: 0;
-}
-
-main.editor nav {
-  margin-bottom: 15px;
-  display: flex;
-  flex-flow: row wrap;
-}
-
-main.editor nav > div {
-  display: inline-flex;
-}
-
-main.editor .empty-nav {
-  flex: 1 0;
-}
-
-#fileName {
-  color: #fff;
-  font-family: courier;
-  background-color: #92ef95;
-  font-size: 20px;
-  padding: 3px;
-  border-radius: 3px;
-}
-
-#runFile {
-  font-weight: bold;
-  font-size: 17px;
+a, a:hover, a:focus  {
+    color: #337ab7;
+    text-decoration: none;
 }
 
 li {
@@ -132,4 +76,72 @@ li {
 
 .red {
   color: red;
+}
+
+button.add {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#submitContainer {
+    padding: 20px 0 15px 0;
+}
+
+
+
+/* EDITOR */
+#editor {
+  height: 500px;
+  margin: 0;
+}
+
+main.editor {
+	nav {
+	  margin-bottom: 15px;
+	  display: flex;
+	  flex-flow: row wrap;
+
+		& > div {
+			display: inline-flex;
+		}
+	}
+
+	.empty-nav {
+		flex: 1 0;
+	}
+}
+
+#fileName {
+  color: #fff;
+  font-family: courier;
+  background-color: #92ef95;
+  font-size: 20px;
+  padding: 3px;
+  border-radius: 3px;
+}
+
+#runFile {
+  font-weight: bold;
+  font-size: 17px;
+}
+
+
+/* FOOTER */
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: #92ef95;
+    opacity: 0.7;
+    height: 50px;
+    padding: 15px;
+    width: 100%;
+    text-align: center;
+    transition: opacity 1s;
+    z-index: 4;
+
+		h4 {
+			margin: 0;
+		}
 }
