--- a/app/templates/login.gohtml
+++ b/app/templates/login.gohtml
@@ -4,24 +4,30 @@
 		<div id="headerDescription">
 				<h3>Un REPL comme outil d'enseignment</h3>
 				<nav class="pull-right">
-						<a href="/" class="btn btn-lg btn-primary">S'inscrire <span class="glyphicon glyphicon-user"></span></a>
+						<a href="/users/signup" class="btn btn-lg btn-primary">S'inscrire <span class="glyphicon glyphicon-user"></span></a>
 				</nav>
 		</div>
-
 </header>
+
+{{if .error}}
+	<div class="alert alert-danger alert-dismissible" role="alert">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		<strong>Erreur!</strong> {{.error}}
+	</div>
+{{end}}
 
 <main>
 		<div id="signupContainer">
 				<h2 class="header text-center">Se connecter <span class="glyphicon glyphicon-log-in"></span></h2>
 		</div>
-		<form action="postEndpoint" method="POST">
+		<form action="/users/login" method="POST">
 				<div class="form-group">
 						<label for="emailInput">Adresse courriel</label>
-						<input type="email" class="form-control" id="emailInput" placeholder="courriel">
+						<input type="email" class="form-control" id="emailInput" name="email" placeholder="courriel" required>
 				</div>
 				<div class="form-group">
 						<label for="passwordInput">Mot de passe</label>
-						<input type="password" class="form-control" id="passwordInput" placeholder="mot de passe">
+						<input type="password" class="form-control" id="passwordInput" name="password" placeholder="mot de passe" required>
 				</div>
 				<div id="submitContainer" class="text-center">
 						<button type="submit" class="btn btn-lg btn-success text-center">Soumettre <span class="glyphicon glyphicon-send"></span></button>
