--- a/app/templates/signedup.gohtml
+++ b/app/templates/signedup.gohtml
@@ -4,7 +4,7 @@
 		<div id="headerDescription">
 				<h3>Un REPL comme outil d'enseignment</h3>
 				<nav class="pull-right">
-						<a href="/login" class="btn btn-lg btn-primary">Se connecter <span class="glyphicon glyphicon-log-in"></span></a>
+						<a href="/users/login" class="btn btn-lg btn-primary">Se connecter <span class="glyphicon glyphicon-log-in"></span></a>
 				</nav>
 		</div>
 </header>
