--- a/app/templates/signup.gohtml
+++ b/app/templates/signup.gohtml
@@ -4,7 +4,7 @@
 		<div id="headerDescription">
 				<h3>Un REPL comme outil d'enseignment</h3>
 				<nav class="pull-right">
-						<a href="/login" class="btn btn-lg btn-primary">Se connecter <span class="glyphicon glyphicon-log-in"></span></a>
+						<a href="/users/login" class="btn btn-lg btn-primary">Se connecter <span class="glyphicon glyphicon-log-in"></span></a>
 				</nav>
 		</div>
 
@@ -21,7 +21,7 @@
 		<div id="signupContainer">
 				<h2 class="header text-center">S'inscrire <span class="glyphicon glyphicon-user"></span></h2>
 		</div>
-		<form id="createUser" action="/users" method="POST">
+		<form id="createUser" action="/users/signup" method="POST">
 				<div class="form-group">
 						<label for="nameInput">Nom</label>
 						<input type="text" class="form-control" id="nameInput" name="name" placeholder="nom" value="{{.name}}" required>
@@ -37,6 +37,21 @@
 				<div class="form-group">
 						<label for="repeatPasswordInput">Répéter de passe</label>
 						<input type="password" class="form-control" id="repeatPasswordInput" placeholder="mot de passe" required>
+				</div>
+				<div class="form-group">
+
+					<div class="radio">
+						<label>
+							<input type="radio" name="role" id="student" value="student" checked>
+							Étudiant
+						</label>
+						</div>
+						<div class="radio">
+						<label>
+							<input type="radio" name="role" id="teacher" value="teacher">
+							Professeur
+						</label>
+					</div>
 				</div>
 				<div id="submitContainer" class="text-center">
 						<button type="submit" class="btn btn-lg btn-success text-center">Soumettre <span class="glyphicon glyphicon-send"></span></button>
