--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -29,9 +29,32 @@ main {
   margin-bottom: 100px; }
   main .header {
     display: inline-block;
+    margin-bottom: 40px; }
+  main .header, main .group {
     padding: 10px 30px;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.85); }
+  main .group {
+    margin: 0 auto 20px auto;
+    position: relative;
+    padding-left: 80px;
+    text-align: center;
+    width: 350px;
+    min-height: 86px; }
+  main .group:hover .group-chevron {
+    transform: translateY(-50%); }
+  main .group-chevron {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%) rotateZ(-90deg);
+    font-size: 55px;
+    transition: transform 0.5s; }
+  main #groupsList {
+    padding-left: 0; }
+  main .group h3 {
+    margin-top: 10px;
+    color: black; }
 
 main.list {
   position: relative; }
