--- a/app/templates/user-groups.gohtml
+++ b/app/templates/user-groups.gohtml
@@ -34,7 +34,7 @@
 							</div>
 			      </div>
 			      <div class="modal-footer">
-			        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			        <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
 			        <button type="submit" class="btn btn-primary">Créer</button>
 			      </div>
 					</form>
