--- a/app/templates/user-files.gohtml
+++ b/app/templates/user-files.gohtml
@@ -25,7 +25,7 @@
 					  </div>
 						<div class="form-group">
 							<label for="fileExtensionInput">Extension du fichier</label>
-							<select class="form-control" id="fileExtensionInput">
+							<select class="form-control" id="fileExtensionInput" name="fileExtension">
 							  <option>js</option>
 							  <option>go</option>
 							</select>
