--- a/app/templates/signup.gohtml
+++ b/app/templates/signup.gohtml
@@ -1,6 +1,6 @@
 {{define "body"}}
 <header class="jumbotron">
-	<h1><a href="#"><img src="/public/img/logo.png" alt="logo" width="100" height="100"> REPL en classe</a></h1>
+	<h1><a href="/"><img src="/public/img/logo.png" alt="logo" width="100" height="100"> REPL en classe</a></h1>
 		<div id="headerDescription">
 				<h3>Un REPL comme outil d'enseignment</h3>
 				<nav class="pull-right">
