--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -161,6 +161,42 @@ main.editor {
   font-size: 17px;
 }
 
+#changeStatus {
+	line-height: 38px;
+	color: white;
+	font-size: 15px;
+	cursor: pointer;
+
+	.file-status {
+		width: 20px;
+		height: 20px;
+		border-radius: 10px;
+		display: inline-block;
+		margin: 0 10px 0 4px;
+		vertical-align: middle;
+		transition: background-color 1s;
+
+		&.true {
+			background: red;
+		}
+
+		&.false {
+			background: #92ef95;
+		}
+	}
+}
+
+#runFile {
+	&:hover .glyphicon {
+		transform: rotateZ(180deg);
+	}
+
+	.glyphicon {
+		transition: transform 0.6s;
+	}
+}
+
+
 
 /* FOOTER */
 footer {
