incorporé version initiale du websocket pour l'éditeur

--- a/app/templates/editor.gohtml
+++ b/app/templates/editor.gohtml
@@ -26,6 +26,7 @@
 				</span>
 				<span class="file-status {{.editor.privateFile}}"></span>
 			</div>
+			<button class="btn btn-success" id="saveFile">Sauver <span class="glyphicon glyphicon-save"></span></button>
 			<!-- Enable button once connection is made -->
 			<button class="btn btn-info disabled" id="runFile">Rouler <span class="glyphicon glyphicon-cog"></span></button>
 
