--- a/app/templates/editor.gohtml
+++ b/app/templates/editor.gohtml
@@ -10,6 +10,9 @@
 </header>
 
 <main class="editor">
+	<div>
+		<button class="btn btn-primary"><a href="/groups/{{.groupId}}/"><span class="glyphicon glyphicon-menu-left"></span> Retourner au groupe</a></button>
+	</div>
 	<nav>
 		<div class="left-nav">
 			<span id="fileName">{{.editor.fileName}}</span>
