--- a/app/templates/editor.gohtml
+++ b/app/templates/editor.gohtml
@@ -11,7 +11,7 @@
 
 <main class="editor">
 	<div>
-		<button class="btn btn-primary"><a href="/groups/{{.groupId}}/"><span class="glyphicon glyphicon-menu-left"></span> Retourner au groupe</a></button>
+		<a type="button" class="btn btn-primary" href="/groups/{{.groupId}}/"><span class="glyphicon glyphicon-menu-left"></span> Retourner au groupe</a>
 	</div>
 	<nav>
 		<div class="left-nav">
