--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -59,12 +59,16 @@ main {
 		}
 
 		.group {
-			margin: 0 auto 20px auto;
+			margin: 20px auto 0 auto;
 			position: relative;
 			padding-left: 80px;
 			text-align: center;
 			width: 350px;
 			min-height: 86px;
+
+			&.no-bottom-border-radius {
+				border-radius: 10px 10px 0 0;
+			}
 		}
 
 		.group:hover .group-chevron {
@@ -109,6 +113,16 @@ main {
 				font-size: 15px;
 				font-style: italic;
 				color: #4c4c4c;
+			}
+
+			.clone-file {
+				width: 350px;
+				margin: 0 auto 20px auto;
+
+				& button {
+					border-radius: 0 0 6px 6px;
+					width: 100%;
+				}
 			}
 		}
 }
