--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -1,7 +1,29 @@
 /* BODY */
+html.peek, body.peek {
+  border-radius: 20px;
+  background-color: transparent; }
+
 body {
   background-color: aliceblue;
   font-family: 'Roboto', 'Verdana', 'sans-serif'; }
+  body .cover, body iframe {
+    display: none; }
+  body .cover {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background: rgba(255, 255, 255, 0.8); }
+  body iframe {
+    width: 1140px;
+    height: 700px;
+    z-index: 11;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
 /* HEADER */
 #headerDescription {
@@ -27,6 +49,8 @@ main {
   padding: 25px;
   border-radius: 20px;
   margin-bottom: 100px; }
+  main.peek {
+    margin-bottom: 0; }
   main .header {
     display: inline-block;
     margin-bottom: 40px; }
@@ -42,13 +66,23 @@ main {
     margin: 20px auto 0 auto;
     position: relative;
     padding-left: 80px;
+    padding-right: 40px;
     text-align: center;
-    width: 350px;
+    width: 400px;
     min-height: 86px; }
     main .group.no-bottom-border-radius {
       border-radius: 10px 10px 0 0; }
-  main .group:hover .group-chevron {
-    transform: translateY(-50%); }
+    main .group:hover .group-chevron {
+      transform: translateY(-50%); }
+    main .group .peek {
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      border-radius: 0 10px 10px 0;
+      outline: 0 !important; }
+      main .group .peek.no-bottom-right-border-radius {
+        border-radius: 0 10px 0 0; }
   main .group-chevron {
     position: absolute;
     top: 50%;
@@ -77,7 +111,7 @@ main {
       font-style: italic;
       color: #4c4c4c; }
     main .user-files .clone-file {
-      width: 350px;
+      width: 400px;
       margin: 0 auto 20px auto; }
       main .user-files .clone-file button {
         border-radius: 0 0 6px 6px;
