--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -223,6 +223,18 @@ button.add {
   margin: 0;
 }
 
+#results {
+	height: 100px;
+
+	&.error .ace_line {
+		color: red;
+	}
+
+	&.no-error .ace_line {
+		color: green;
+	}
+}
+
 main.editor {
 	& > div {
 		margin-bottom: 50px;
