--- a/app/templates/minimal-editor.gohtml
+++ b/app/templates/minimal-editor.gohtml
@@ -32,7 +32,7 @@
 						<button class="btn btn-success" id="saveFile">Sauver <span class="glyphicon glyphicon-save"></span></button>
 					{{end}}
 					<!-- Enable button once connection is made -->
-					<button class="btn btn-info disabled" id="runFile">Rouler <span class="glyphicon glyphicon-cog"></span></button>
+					<button class="btn btn-info" id="runFile">Rouler <span class="glyphicon glyphicon-cog"></span></button>
 
 				</div>
 			</nav>
