ajout de feedback au websocket dans l'éditeur

--- a/app/templates/editor.gohtml
+++ b/app/templates/editor.gohtml
@@ -39,5 +39,8 @@
 	</nav>
 	<pre id="editor" data-isowner="{{.editor.isFileOwner}}" data-extension="{{.editor.fileExtension}}" data-code="{{.editor.fileContent}}"></pre>
 	<pre id="results"></pre>
+	<div id="loader">
+  	<img src="/public/img/big-loader.gif" alt="loader gif">
+	</div>
 </main>
 {{end}}
