--- a/app/public/style/style.css
+++ b/app/public/style/style.css
@@ -214,6 +214,21 @@ main.editor .right-nav button {
     #changeStatus .file-status.false {
       background: #92ef95; }
 
+#loader {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.65);
+  z-index: 12; }
+  #loader img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+
 /* FOOTER */
 footer {
   position: fixed;
