--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -319,6 +319,24 @@ main.editor {
 	}
 }
 
+#loader {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.65);
+  z-index: 12;
+
+	img {
+		position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-50%, -50%)
+	}
+}
+
 
 
 /* FOOTER */
