--- a/app/templates/minimal-editor.gohtml
+++ b/app/templates/minimal-editor.gohtml
@@ -19,7 +19,7 @@
 				<div class="empty-nav"></div>
 				<div class="right-nav">
 					{{if .editor.isFileOwner}}
-						<div id="changeStatus" data-status="{{.editor.privateFile}}" data-toggle="popover" title="Changer de statut" data-content="Cliquez pour changer le statut du fichier" data-placement="top" data-trigger="hover" data-container="body">
+						<div id="changeStatus" data-status="{{.editor.privateFile}}" data-toggle="popover" title="Changer de statut" data-content="Cliquez pour changer le statut du fichier" data-placement="auto top" data-trigger="hover" data-container="body">
 							<span class="status-text">
 								{{if .editor.privateFile}}
 									Privé
@@ -38,6 +38,9 @@
 			</nav>
 			<pre id="editor" data-isowner="{{.editor.isFileOwner}}" data-extension="{{.editor.fileExtension}}" data-code="{{.editor.fileContent}}"></pre>
 			<pre id="results"></pre>
+			<div id="loader">
+				<img src="/public/img/big-loader.gif" alt="loader gif">
+			</div>
 		</main>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
