ajouté python+ruby+elixir dans les langages pouvant être exécutés

--- a/app/templates/user-files.gohtml
+++ b/app/templates/user-files.gohtml
@@ -28,6 +28,9 @@
 							<select class="form-control" id="fileExtensionInput" name="fileExtension">
 							  <option>js</option>
 							  <option>go</option>
+								<option>py</option>
+								<option>rb</option>
+								<option>exs</option>
 							</select>
 						</div>
 						<input type="file" id="fileContentInput" name="fileContent" required>
