accepte un fichier vide à la création, quand un utilisateur part de rien

--- a/app/templates/user-files.gohtml
+++ b/app/templates/user-files.gohtml
@@ -33,7 +33,7 @@
 								<option>exs</option>
 							</select>
 						</div>
-						<input type="file" id="fileContentInput" name="fileContent" required>
+						<input type="file" id="fileContentInput" name="fileContent">
 						<div class="form-group">
 							<div class="radio">
 								<label>
